# saitama_data

./: .gitignore  EXMPLE_TROUBLE.md  Pipfile  README.md  pyproject.toml  requirements.txt
data/info/: school_2015.csv  school_2016.csv  seito_2017.csv
data/info/school_qes/: school_qes_2016_j.csv  school_qes_2016_p.csv  school_qes_2017_j.csv  school_qes_2017_p.csv  school_qes_2018_j.csv  school_qes_2018_p.csv  school_qes_2019_j.csv  school_qes_2019_p.csv  sq_regex_info.csv
data/info/seito_qes/: seito_2015.csv  seito_2016.csv  seito_2018.csv  seito_2020.csv
data/info/seito_qes_information_file/: 生徒質問.xlsx
data/info/学校質問/: qes_info.xlsx
data/info/生徒質問/: seito_2019.csv
dftest/: __init__.py  info.py  lib.py  test.py
saitama_data/: connect_server.py  setting.ini  setting_sample.ini
saitama_data/datasetup/lib/: save_load_db_and_gzip.py
saitama_data/datasetup/models/: seed.py  util.py
saitama_data/datasetup/test/: test.py
saitama_data/lib/: __init__.py  read_config.py  safe_path.py
saitama_data/sql/: connect_postgres.py
src/: connect_server.py  setting.ini
src/datasetup/lib/: save_load_db_and_gzip.py
src/datasetup/models/: __init__.py  util.py
src/datasetup/test/: data_tester.py  test.py
tests/: test.py  tests_exclude_seito_qes.sh
tests/model/: info.py  lib.py  master.py  work.py
tests/snapshots/: snap_test.py
tests/snapshots/snap_test/: test_city city.csv  test_class_id_school_id class_id_school_id.csv  test_correspondence correspondence.csv  test_gakuryoku gakuryoku.csv  test_idmaster idmaster.csv  test_school_class school_class.csv  (+5 more)
(+170 files in other folders)
