[tool.poetry]
name = "saitama_data"
version = "0.1.0"
description = ""
authors = ["Ito Hirotake <itouhrtk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "0.23.0"
sqlalchemy = "1.3.3"
psycopg2 = "2.8.2"
pandas-schema = "0.3.2"
camel = "*"
xlrd = "1.1.0"
tqdm = "4.19.5"
openpyxl = "2.6.2"
jupyterlab = "*"
dataclasses = "*"
ipython = "7.16.3"
snapshottest = "*"
addict = "*"

[tool.poetry.dev-dependencies]
pylint = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
